--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "esm": "^3.2.25",
     "fast-shuffle": "^1.0.5",
     "koa": "^2.11.0",
+    "koa-body": "^4.1.1",
     "koa-ejs": "^4.2.0",
     "koa-logger": "^3.2.1",
     "node-fetch": "^2.6.0"
