--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Built files
+lib
+bin
+
+# Data files
 public.pem
 private.pem
 genesis.json
@@ -13,9 +18,6 @@ yarn-error.log*
 lerna-debug.log*
 
 .vscode
-
-# Build cache
-.webpack-cache
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
